syntax = "proto3";
package ValdiArtifactManagement;

option java_package = "snapchat.valdi.artifactmanagement";
option java_multiple_files = true;

////////////////////////////////////////////////////////////////
// Messages described here are used by a developer-only service,
// currently running on `content-platform`.
// See /contentplatform/valdi-artifact-management.proto
////////////////////////////////////////////////////////////////

// Endpoint suffix: /uploadArtifact
message UploadArtifactRequest {
  // A unique key generated by the client.
  // If an item already exists at this key, it should
  // be replaced
  string key = 1;
  // The human-readable name of the artifact. It doesn't need to be unique
  string name = 2;
  // The bytes contents of the artifact
  bytes data = 3;
}

message UploadArtifactResponse {
  bool success = 1;
  string error_message = 2;
  string url = 3;
}

// Endpoint suffix: /getArtifact
message GetArtifactRequest { 
    string key = 1;
}

message GetArtifactResponse {
  bool success = 1;
  string error_message = 2;
  string url = 3;
  string name = 4;
}

message ManagedArtifact {
    string key = 1;
    string url = 2;
    string name = 3;
}